# concrete-ear

./: .gitmodules  CMakeLists.txt  README.md  mpdmonitor.py
mpdwatch/: mpdwatch.cpp
presentations/clt_2015/: README.md
sketchbook/visualize/: visualize.ino
